# ffxiv_archives

./: .gitignore  CLAUDE.md  README.md  bash.exe.stackdump  package-lock.json
data_export/: __main__.py  app.py  choices.py  requirement.txt  settings.py  update.py
data_export/_dumps/output/: cutscenes.txt  fates.txt  fishes.txt  mounts.txt  statuses.txt  tripletriadcards.txt
data_export/exports/: cut_scenes.py  quests.py  scrub.py
data_export/parse/: _scrub.py  _shared.py  custom.py  cutscenes.py  fates.py  fishes.py  items.py  mounts.py  quests.py  scrub.py  statuses.py  tripletriadcards.py
ffxiv_archives/: app.py  cut_scenes.py  quests.py  scrub.py  settings.py
ffxiv_archives/output/: cut_scenes.txt
lore-app/: package-lock.json  package.json  tsconfig.json
lore-app/pages/: search.tsx
lore-app/pages/api/: search.js
lore-search-app/: CLAUDE.md  package-lock.json  package.json  realm_config.json  tailwind.config.ts
lore-search-app/app/: globals.css  layout.tsx  page.tsx
lore-search-app/types/: dragTypes.ts  enums.ts  fonts.ts  objectTypes.ts  types.ts
xivexport/: CLAUDE.md  README.md  __main__.py  pyproject.toml  pytest.ini
xivexport/_dumps/: response (1).json
xivexport/_dumps/output/: dump.json  dump.txt
xivexport/src/xivexport/: _scrub.py  _tools.py  adapter.py  app.py  model.py  search.py  settings.py  xivclient.py
xivexport/src/xivexport/parse/: _shared.py  custom.py  cutscenes.py  fates.py  fishes.py  items.py  mounts.py  quests.py  statuses.py  tripletriadcards.py
xivexport/tests/: README.md  conftest.py  test_xivclient.py
(+126 files in other folders)
