[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xivexport"
version = "0.1.0"
description = "FFXIV data export tool for archiving game content"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "The Eorzean Archives", email = ""},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymongo",
    "pydantic",
    "requests",
    "python-dotenv",
    "htpy>=25.12.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
xivexport = "xivexport.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xivexport"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]
